--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/webpage1.css">
+    <script src="js/webpage1.js"></script>
 </head>
 <body>
 	<nav class="navbar navbar-dark navbar-expand-sm bg-dark fixed-top">
